examples/e2e/pod/envoy-pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: envoy1
  namespace: default
spec:
  containers:
    - name: envoy-sidecar
      image: envoyproxy/envoy:v1.16.0
      command: ["envoy"]
      args:
        [
          "-c",
          "/etc/envoy/bootstrap/config.json",
          "--component-log-level",
          "config:debug",
          "--service-cluster",
          "envoy1",
          "--service-node",
          "envoy1",
        ]
      ports:
        - name: http
          containerPort: 1080
          hostPort: 1080
          protocol: TCP
        - name: https
          containerPort: 1443
          hostPort: 1443
          protocol: TCP
      volumeMounts:
        - name: envoy-bootstrap
          mountPath: /etc/envoy/bootstrap
        - name: envoy-client-cert
          mountPath: /etc/envoy/tls/client
  volumes:
    - name: envoy-bootstrap
      configMap:
        name: envoy-bootstrap-v2
    - name: envoy-client-cert
      secret:
        secretName: discoveryservice-client-certificate
