examples/e2e/pod/envoybootstrap.yaml
apiVersion: marin3r.3scale.net/v1alpha1
kind: EnvoyBootstrap
metadata:
  name: envoy1
spec:
  discoveryService: instance
  clientCertificate:
    directory: /etc/envoy/tls/client
    secretName: discoveryservice-client-certificate
    duration: 1h
  envoyStaticConfig:
    configMapNameV2: envoy-bootstrap-v2
    configMapNameV3: envoy-bootstrap-v3
    configFile: config.yaml
    resourcesDir: /etc/envoy/bootstrap
    rtdsLayerResourceName: runtime
    adminBindAddress: 0.0.0.0:9901
    adminAccessLogPath: /dev/null
