examples/e2e/pod/envoyconfig-v2.yaml
apiVersion: envoy.marin3r.3scale.net/v1alpha1
kind: EnvoyConfig
metadata:
  name: envoy1
  labels:
    marin3r.3scale.net/node-id: envoy1
spec:
  # Add fields here
  nodeID: envoy1
  serialization: yaml
  envoyResources:
    secrets:
      - name: envoy1.default.svc
        ref:
          name: envoy1-cert
          namespace: default
    clusters:
      - name: echo-api.3scale.net
        value: |
          name: echo-api.3scale.net
          connect_timeout: 11ms
          type: STRICT_DNS
          dns_lookup_family: V4_ONLY
          lb_policy: ROUND_ROBIN
          load_assignment:
            cluster_name: echo-api.3scale.net
            endpoints:
              - lb_endpoints:
                  - endpoint:
                      address: { socket_address: { address: echo-api.3scale.net, port_value: 443 }}
          transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              "@type": type.googleapis.com/envoy.api.v2.auth.UpstreamTlsContext
              sni: echo-api.3scale.net
    routes:
      - name: echo-api.3scale.net
        value: |
          name: echo-api.3scale.net
          virtual_hosts:
            - name: ingress
              domains: ["*"]
              routes:
                - match:
                    prefix: "/"
                  route:
                    host_rewrite: echo-api.3scale.net
                    cluster: echo_api
    listeners:
      - name: http
        value: |
          name: http
          address:
            socket_address:
              address: 0.0.0.0
              port_value: 1080
          filter_chains:
            - filters:
              - name: envoy.http_connection_manager
                typed_config:
                  "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
                  access_log:
                    - name: envoy.file_access_log
                      config:
                        path: /dev/stdout
                  stat_prefix: ingress_http
                  rds: { route_config_name: "echo-api.3scale.net", config_source: { ads: {}}}
                  http_filters:
                    - name: envoy.router
      - name: https
        value: |
          name: https
          address:
            socket_address:
              address: 0.0.0.0
              port_value: 1443
          filter_chains:
            - filters:
              - name: envoy.http_connection_manager
                typed_config:
                  "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
                  access_log:
                    - name: envoy.file_access_log
                      config:
                        path: /dev/stdout
                  stat_prefix: ingress_https
                  rds: { route_config_name: "echo-api.3scale.net", config_source: { ads: {}}}
                  http_filters:
                    - name: envoy.router
              transport_socket:
                name: envoy.transport_sockets.tls
                typed_config:
                  "@type": "type.googleapis.com/envoy.api.v2.auth.DownstreamTlsContext"
                  common_tls_context:
                    tls_certificate_sds_secret_configs:
                      - name: envoy1.default.svc
                        sds_config: { ads: {}}
