examples/e2e/pod/envoyconfig-v3.yaml
apiVersion: envoy.marin3r.3scale.net/v1alpha1
kind: EnvoyConfig
metadata:
  name: envoy1
  labels:
    marin3r.3scale.net/node-id: envoy1
spec:
  # Add fields here
  nodeID: envoy1
  serialization: yaml
  envoyAPI: v3
  envoyResources:
    secrets:
      - name: envoy1.default.svc
        ref:
          name: envoy1-cert
          namespace: default
    clusters:
      - name: echo_api
        value: |
          name: echo_api
          connect_timeout: 11ms
          type: STRICT_DNS
          dns_lookup_family: V4_ONLY
          lb_policy: ROUND_ROBIN
          load_assignment:
            cluster_name: echo_api
            endpoints:
              - lb_endpoints:
                  - endpoint:
                      address: { socket_address: { address: echo-api.3scale.net, port_value: 443 }}
          transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
              sni: echo-api.3scale.net
    routes:
      - name: echo-api.3scale.net
        value: |
          name: echo-api.3scale.net
          virtual_hosts:
            - name: ingress
              domains: ["*"]
              routes:
                - match:
                    prefix: "/"
                  route:
                    auto_host_rewrite: true
                    cluster: echo_api
    listeners:
      - name: http
        value: |
          name: http
          address: { socket_address: { address: 0.0.0.0, port_value: 8080 }}
          filter_chains:
            - filters:
                - name: envoy.filters.network.http_connection_manager
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                    access_log:
                      - name: envoy.access_loggers.file
                        typed_config:
                          "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                          path: /dev/stdout
                    stat_prefix: ingress_http
                    rds: { route_config_name: "echo-api.3scale.net", config_source: { ads: {}, resource_api_version: "V3" }}
                    http_filters:
                      - name: envoy.filters.http.router
      - name: https
        value: |
          name: https
          address: { socket_address: { address: 0.0.0.0, port_value: 8443 }}
          filter_chains:
            - filters:
                - name: envoy.filters.network.http_connection_manager
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                    access_log:
                      - name: envoy.access_loggers.file
                        typed_config:
                          "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                          path: /dev/stdout
                    stat_prefix: ingress_https
                    rds: { route_config_name: "echo-api.3scale.net", config_source: { ads: {}, resource_api_version: "V3" }}
                    http_filters:
                      - name: envoy.filters.http.router
              transport_socket:
                name: envoy.transport_sockets.tls
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
                  common_tls_context:
                    tls_certificate_sds_secret_configs:
                      - name: envoy1.default.svc
                        sds_config: { ads: {}, resource_api_version: "V3" }
